4.BuildAndRunInAKS/aks-helloworld-app.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: aks-helloworld-deployment
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: aks-helloworld-app
    spec:
      containers:
      - name: aks-helloworld-demo-ct
        image: neilpeterson/aks-helloworld:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: aks-helloworld-app
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: aks-helloworld-app
