4.BuildAndRunInAKS/aks-helloworld-ilb.yaml
apiVersion: v1
kind: Service
metadata:
  name: aks-helloworld-ilb
  loadBalancerIP: 10.3.1.4
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
    service.beta.kubernetes.io/azure-load-balancer-internal-subnet: "FrontSubnet"
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: aks-helloworld-app
