4.BuildAndRunInAKS/aks-helloworld-route-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aks-helloworld-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - aks.jazuregrave.fr
    secretName: aks-ingress-tls
  rules:
  - host: aks.jazuregrave.fr
  - http:
      paths:
      - backend:
          serviceName: aks-helloworld-app
          servicePort: 80
