4.BuildAndRunInAKS/aks-helloworld-route.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aks-helloworld-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: aks-helloworld-app
          servicePort: 80
